--- a/report.tex
+++ b/report.tex
@@ -24,8 +24,7 @@
 \author{Lorenz Gerber ({\tt{dv15lgr@cs.umu.se}})} 
 \date{2016-02-18}
 %\revisiondate{2016-01-18}
-\instructor{Lena Kallin Westin / Johan Eliasson / Emil Marklund / Lina
-Ögren}
+\instructor{Lena Kallin Westin / Erik Moström / Lina Ögren}
 
 
 % DOCUMENT SETTINGS
@@ -53,22 +52,89 @@
 \begin{document}
 \lstset{language=C}
 \maketitle
+\thispagestyle{empty}
 
 \tableofcontents
 \newpage
 
+\clearpage
+\pagenumbering{arabic} 
+
 \section{Introduction} 
-The aim with this laboration was to...
+The aim of this laboration was to plan and implement a command line
+program written in C that accomplishes encoding and decoding of 
+text files according to the \emph{Huffman} algorithm.
+
+The \emph{Huffman} algoritm is used for data compression, in our case
+for text files. The basic idea is that instead of using 8 bytes for
+every character, fine unique variable length binary representations
+for every character where the most common used characters get the
+shortest binary sequences. In practice, this includes several steps:
+First a frequency count table of all characters has to be
+compiled. Then a binary tree is constructed where characters and their
+count frequency as leafs. Characters with high frequency count will be
+placed the closest to the tree root. A more detailed description of
+this process will be given in the method description.
+
+
 
 \section{Material and Methods}
-We used method bla bla bla...
+\subsection{Datatypes}
+From the provided datatypes we used \emph{prioqueue} (which is built on
+\emph{list\_2cell}), \emph{tree\_3cell}, and \emph{bitset}. 
+
+
+
+\subsection{Work Organization}
+On an initial kick-off meeting, we discussed the problem and possible
+solution strategies. Then we created repositories for the 
+\emph{\href{https://github.com/lorenzgerber/huffman}{code}} and for
+the \emph{\href{https://github.com/lorenzgerber/report_huffman}{report}}
+on \emph{\href{https://github.com}{github}} and setup a team in a 
+workgroup messaging  app (\emph{\href{https://slack.com}{slack}}). All
+further work and communication was done remote using the
+afore-mentioned tools. 
 
 \section{Results}
 And our results looked like this...
 
 \section{Discussion}
+bla bla bla...
 
-bla bla bla... 
+\section{Contributions}
+Both authors were involved in every function with either writing or
+debugging/checking it. The initials in table \ref{tab:contribution}
+stand for the person who initially wrote the respective function.
+
+
+\begin{table}[]
+\centering
+\caption{work contributionsn}
+\label{tab:contribution}
+\begin{tabular}{ll}
+planning and defining the strategy & SAN, LGR \\
+setting up and managing git repos  & LGR      \\
+                                   &          \\
+initial code structure             & SAN, LGR \\
+main program and argument handling & LGR      \\
+char frequency count               & SAN      \\
+compare tree function              & SAN      \\
+build Huffman tree                 & SAN      \\
+tree traversal function            & SAN      \\
+huffman code from tree traversal   & LGR      \\
+encode function                    & LGR      \\
+decode function                    & SAN, LGR \\
+file read/write                    & LGR      \\
+                                   &          \\
+commenting and styling code        & SAN, LGR \\
+memory leak check                  & SAN      \\
+                                   &          \\
+setting up LaTex document          & LGR      \\
+writing report                     & SAN LGR  \\
+                                   &         
+\end{tabular}
+\end{table}
+
 
 \addcontentsline{toc}{section}{\refname}
 \bibliography{references}
