added a bit more discussion. Moved the "program structure" into the "results" section

--- a/references.bib
+++ b/references.bib
@@ -7,6 +7,16 @@
   volume  = 42
 }
 
+@article{huffman1952,
+  author  = {David A. Huffman},
+  title   = {A Method for the Construction of Minimum-Redundancy Codes},
+  journal = {Proceedings of the I.R.E},
+  year    = 1952,
+  volume  = 40,
+  number  = 9,
+  pages   = {1098-1101}}
+
+
 @book{janlert2000,
   title     = {Datatyper och algoritmer},
   author    = {Janlert, L.E. and Wiberg, T.},
