fixed coursename, content on a separate page

--- a/report.tex
+++ b/report.tex
@@ -17,13 +17,13 @@
 % DOCUMENT INFO
 % =============
 \department{Institution för Datavetenskap}
-\coursename{Datavetenskapens byggstenar 7.5 p}
-\coursecode{DV160HT15}
+\coursename{DV2: Algorithms and Problemsolving 7.5 p}
+\coursecode{5DV169}
 \title{OU3 Huffman Coding}
 \author{Simon Andersson ({\tt{dv15san@cs.umu.se}})}
 \author{Lorenz Gerber ({\tt{dv15lgr@cs.umu.se}})} 
 \date{2016-02-18}
-%\revisiondate{2016-01-18}
+\revisiondate{2016-03-04}
 \instructor{Lena Kallin Westin / Erik Moström / Jonathan Westin}
 
 
@@ -54,6 +54,8 @@
 \maketitle
 \thispagestyle{empty}
 
+\newpage
+\thispagestyle{empty}
 \tableofcontents
 \newpage
 
